# lightroom_mcp

./: .gitignore  CLAUDE.md  README.md  SHUTDOWN_FIXES.md  lightroom-mcp-issues.md  pyproject.toml
docs/: API_DEVELOP_REFERENCE.md  API_REFERENCE.md
lightroom-python-bridge.lrdevplugin/: AppShutdown.lua  CatalogModule.lua  CommandRouter.lua  Logger.lua  MessageProtocol.lua  PluginInit.lua  PluginMetadataModule.lua  PluginShutdown.lua  PreviewModule.lua  SimpleSocketBridge.lua  StopMenuAction.lua
lightroom_sdk/: client.py  socket_bridge.py
mcp_server/: __init__.py  main.py
mcp_server/middleware/: __init__.py  error_handler.py
mcp_server/servers/: __init__.py  catalog.py  preview.py  system.py
mcp_server/servers/develop/: __init__.py  basic_tools.py  calibration_tools.py  color_tools.py  detail_tools.py  effects_tools.py  helper_tools.py  lens_tools.py  main.py  parameter_management.py  tone_curves.py
mcp_server/shared/: __init__.py  base.py  client.py  resilient_client.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
